--- a/source/less/advantages.less
+++ b/source/less/advantages.less
@@ -14,28 +14,16 @@
   padding-right: 20px;
 }
 
-.advantages__item {
-}
-
 .advantages__title {
-  font-family: 'Open Sans', sans-serif;
-  font-weight: 700;
-  font-style: normal;
-  font-size: 18px;
-  line-height: 24px;
+  .fonts(700; 18px; 24px);
   text-align: center;
 }
 
 .advantages__paragrapf {
-  font-family: 'Open Sans', sans-serif;
-  font-weight: 400;
-  font-style: normal;
-  font-size: 14px;
-  line-height: 24px;
+  .fonts(400; 14px; 24px);
   text-align: center;
 }
 
 .advantages__image {
   margin-left: 90px;
-
 }
