--- a/source/less/application-market.less
+++ b/source/less/application-market.less
@@ -2,6 +2,7 @@
   background-color: #1d2631;
   padding: 25px;
 }
+
 .application-market__button {
   width: 280px;
   .fonts(400; 18px; 18px);
@@ -13,5 +14,5 @@
 }
 
 .application-market__text {
-  .fonts(300; 14px; auto)
+  .fonts(300; 14px; auto);
 }
