--- a/source/less/style.less
+++ b/source/less/style.less
@@ -3,7 +3,7 @@
 @import "footer.less";
 
 .fonts(@font-weight; @font-size; @line-height) {
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
   font-style: normal;
   font-weight: @font-weight;
   font-size: @font-size;
@@ -25,20 +25,4 @@ a {
 img {
   max-width: 100%;
   height: auto;
-}
-
-.visually-hidden:not(:focus):not(:active),
-input[type="checkbox"].visually-hidden,
-input[type="radio"].visually-hidden {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  border: 0;
-  padding: 0;
-  white-space: nowrap;
-  -webkit-clip-path: inset(100%);
-  clip-path: inset(100%);
-  clip: rect(0 0 0 0);
-  overflow: hidden;
 }
