--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,6 +1,6 @@
-@import "header.less";
-@import "main.less";
-@import "footer.less";
+@import "blocks/header.less";
+@import "blocks/main.less";
+@import "blocks/footer.less";
 
 .fonts(@font-weight; @font-size; @line-height) {
   font-family: "Open Sans", sans-serif;
