Работа над ошибками

--- a/source/less/blocks/application-market.less
+++ b/source/less/blocks/application-market.less
@@ -6,11 +6,16 @@
 .application-market__button {
   width: 280px;
   .fonts(400; 18px; 18px);
+  .link(#ffffff);
   text-transform: uppercase;
 }
 
 .application-market__list {
   list-style: none;
+}
+
+.application-market__item {
+  .link(#ffffff);
 }
 
 .application-market__text {
