--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -1,17 +1,17 @@
 .page-footer {
-  width: 320px;
-  margin: auto;
+  width: 100%;
   background-color: #ffffff;
 }
 
 .page-footer__logo {
+  .link(#ffffff);
   width: 160px;
-  margin: 20px auto;
+  margin: 20px;
 }
 
 .page-footer__social {
   width: 280px;
-  margin: 20px auto;
+  margin: 20px;
 }
 
 .page-footer__social-list {
@@ -29,7 +29,7 @@
 
 .page-footer__copyright {
   width: 140px;
-  margin: 20px auto;
+  margin: 20px;
 }
 
 .page-footer__copyright-text {
