--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -1,8 +1,11 @@
 .page-header {
-  width: 320px;
+  width: 100%;
   background-color: #283645;
   color: #ffffff;
-  margin: auto;
+}
+
+.page-header__logo {
+  .link(#ffffff);
 }
 
 .page-header__wrapper {
@@ -19,4 +22,8 @@
   .fonts(bold; 18px; 32px);
   text-transform: uppercase;
   text-align: center;
+}
+
+.page-header__link {
+  .link(#ffffff);
 }
