--- a/source/less/style.less
+++ b/source/less/style.less
@@ -4,30 +4,14 @@
 @import "blocks/application-market.less";
 @import "blocks/advantages.less";
 
-@font-face {
-  font-family: "Open Sans";
-  src: url("../fonts/opensans.woff2") format("woff2"), url("../fonts/opensans.woff") format("woff");
-  src: url("../fonts/opensansbold.woff2") format("woff2"), url("../fonts/opensansbold.woff") format("woff");
-  src: url("../fonts/opensanslight.woff2") format("woff2"), url("../fonts/opensanslight.woff") format("woff");
-}
-
-.fonts(@font-weight; @font-size; @line-height) {
-  font-family: "Open Sans", "Arial", sans-serif;
-  font-style: normal;
-  font-weight: @font-weight;
-  font-size: @font-size;
-  line-height: @line-height;
-}
-
-.link(@color) {
-  text-decoration: none;
-  color: @color;
-  cursor: pointer;
-}
-
 .page-body {
   width: 320px;
   margin: 0 auto;
   background-color: #ffffff;
   color: #000000;
+  font-family: "Open Sans", "Arial", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 24px;
 }
