--- a/source/less/style.less
+++ b/source/less/style.less
@@ -3,15 +3,6 @@
 @import "blocks/page-footer.less";
 @import "blocks/application-market.less";
 @import "blocks/advantages.less";
-
-.page-body {
-  width: 320px;
-  margin: 0 auto;
-  background-color: #ffffff;
-  color: #000000;
-  font-family: "Open Sans", "Arial", sans-serif;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 24px;
-}
+@import "blocks/page-body.less";
+@import "fonts.less";
+@import "mixins.less";
