--- a/source/less/blocks/page-body.less
+++ b/source/less/blocks/page-body.less
@@ -1,11 +1,38 @@
 .page-body {
-  width: 320px;
+  min-width: 320px;
   margin: 0 auto;
-  background-color: #ffffff;
+  background-color: @bg-darkgrey;
   color: #000000;
   font-family: "Open Sans", "Arial", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
   line-height: 24px;
+}
+
+.visually-hidden:not(:focus):not(:active),
+input[type="checkbox"].visually-hidden,
+input[type="radio"].visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+@media (min-width: @tablet-width) {
+  .page-body {
+    width: 660px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .page-body {
+    width: 1200px;
+  }
 }
