--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -5,6 +5,11 @@
   width: auto;
   background-color: @bg-white;
   padding: 30px 20px;
+  margin-top: -20px;
+
+  &--hidden {
+    display: none;
+  }
 }
 
 .page-footer__logo {
@@ -48,13 +53,16 @@
   .page-footer {
     flex-direction: row;
     justify-content: space-between;
-    margin: 0;
+    background-color: @bg-white;
+
+    &--hidden {
+      display: flex;
+    }
   }
 }
 
 @media (min-width: @desktop-width) {
   .page-footer {
     padding: 75px 130px;
-    margin-top: -10px;
   }
 }
