--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -1,49 +1,29 @@
 .page-main {
   width: auto;
-  background-color: @bg-white;
+  background: @bg-darkgrey url("../img/bg-back-mobile@1x.jpg") no-repeat 100% 100%;
+  background-size: cover;
 }
 
 .page-main__post-paragraph {
-  width: 280px;
+  display: flex;
+  justify-content: center;
+  background-color: @bg-white;
+  width: 100%;
   .fonts(400; 14px; 30px);
   color: @bg-darkgrey;
-  text-align: center;
   white-space: pre;
-  margin: 0 auto;
 }
 
-.page-main__item-panorama {
+.page-main__title {
   display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  width: 320px;
-  height: 330px;
-  background: @bg-white url("../img/panorama-mobile@1x.jpg") no-repeat 100% 0;
-  margin: 0 auto;
-}
-
-.page-main__item-wrapper {
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  .fonts(300; 24px; auto);
   width: 280px;
-  background-color: @bg-lightgrey;
-  margin: 0 10px 20px 20px;
-}
-
-.page-main__item-name,
-.page-main__item-paragraph {
-  .fonts(400; 14px; 24px);
-  margin: 0 20px;
-  color: @bg-darkgrey;
-}
-
-.page-main__item-time {
-  .fonts(300; 12px; 24px);
-  color: @bg-darkgrey;
-}
-
-.page-main__item-quantity,
-.page-main__item-text {
-  .fonts(300; 12px; 24px);
-  color: @col-red;
+  margin: auto;
+  text-align: center;
+  color: @bg-white;
 }
 
 .photo-list {
@@ -52,6 +32,7 @@
   flex-direction: column;
   background-color: @bg-white;
   list-style: none;
+  margin-top: -20px;
   padding: 0;
 }
 
@@ -60,38 +41,13 @@
   height: 320px;
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
-  margin: 0 auto;
-}
+  justify-content: center;
+  margin: 20px auto;
+  background-color: @bg-lightgrey;
 
-.photo-list__item:nth-child(1) {
-  background: @bg-lightgrey url("../img/photo-car-mobile@1x.jpg") no-repeat 100% 0;
-  margin-bottom: 20px;
-}
-
-.photo-list__item:nth-child(2) {
-  background: @bg-lightgrey url("../img/photo-drumset-mobile@1x.jpg") no-repeat 100% 0;
-  margin-bottom: 20px;
-}
-
-.photo-list__item:nth-child(3) {
-  background: @bg-lightgrey url("../img/photo-window-mobile@1x.jpg") no-repeat 100% 0;
-  margin-bottom: 20px;
-}
-
-.photo-list__item:nth-child(4) {
-  background: @bg-lightgrey url("../img/photo-fair-mobile@1x.jpg") no-repeat 100% 0;
-  margin-bottom: 20px;
-}
-
-.photo-list__item:nth-child(5) {
-  background: @bg-lightgrey url("../img/photo-pov-mobile@1x.jpg") no-repeat 100% 0;
-  margin-bottom: 20px;
-}
-
-.photo-list__item:nth-child(6) {
-  background: @bg-lightgrey url("../img/photo-wing-mobile@1x.jpg") no-repeat 100% 0;
-  margin-bottom: 20px;
+  &--panorama img {
+    margin-left: -20px;
+  }
 }
 
 .photo-list__item-name,
@@ -114,129 +70,72 @@
 }
 
 @media (min-width: @tablet-width) {
-  .page-main__item-panorama {
-    width: 660px;
-    height: 630px;
-    background: @bg-white url("../img/panorama-tablet@1x.jpg") no-repeat 100% 0;
-    margin: 0 auto;
+  .page-main {
+    background: @bg-darkgrey url("../img/bg-back-tablet@1x.jpg") no-repeat 100% 100%;
+    background-size: cover;
   }
 
-  .page-main__item-wrapper {
+  .page-main__title {
+    .fonts(300; 50px; 42px);
     width: 620px;
+    height: 200px;
+  }
+
+  .page-main__post-paragraph {
+    .fonts(400; 18px; 30px);
   }
 
   .photo-list {
-    width: auto;
-    display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     background-color: @bg-white;
     list-style: none;
-    padding: 0;
   }
 
   .photo-list__item {
     width: 300px;
     height: 460px;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    margin: 0 auto;
-  }
 
-  .photo-list__item:nth-child(1) {
-    background: @bg-lightgrey url("../img/photo-car-tablet@1x.jpg") no-repeat 100% 0;
-    margin-bottom: 20px;
-  }
+    &--panorama {
+      width: 580px;
+      padding: 0 20px;
+      margin: 20px;
+    }
 
-  .photo-list__item:nth-child(2) {
-    background: @bg-lightgrey url("../img/photo-drumset-tablet@1x.jpg") no-repeat 100% 0;
-    margin-bottom: 20px;
-  }
-
-  .photo-list__item:nth-child(3) {
-    background: @bg-lightgrey url("../img/photo-window-tablet@1x.jpg") no-repeat 100% 0;
-    margin-bottom: 20px;
-  }
-
-  .photo-list__item:nth-child(4) {
-    background: @bg-lightgrey url("../img/photo-fair-tablet@1x.jpg") no-repeat 100% 0;
-    margin-bottom: 20px;
-  }
-
-  .photo-list__item:nth-child(5) {
-    background: @bg-lightgrey url("../img/photo-pov-tablet@1x.jpg") no-repeat 100% 0;
-    margin-bottom: 20px;
-  }
-
-  .photo-list__item:nth-child(6) {
-    background: @bg-lightgrey url("../img/photo-wing-tablet@1x.jpg") no-repeat 100% 0;
-    margin-bottom: 20px;
+    &--panorama img {
+      width: 660px;
+      height: 509px;
+      margin-left: -40px;
+    }
   }
 }
 
 @media (min-width: @desktop-width) {
-  .page-main__item-panorama {
-    width: 1200px;
-    height: 605px;
-    background: @bg-white url("../img/panorama-desktop@1x.jpg") no-repeat 100% 0;
-    margin: 0 auto;
+  .page-main {
+    background: @bg-darkgrey url("../img/bg-back-desktop@1x.jpg") no-repeat 100% 100%;
+    background-size: cover;
   }
 
-  .page-main__item-wrapper {
-    width: 940px;
+  .page-main__title {
+    .fonts(300; 50px; 42px);
+    width: 620px;
+    height: 200px;
   }
 
   .photo-list {
-    width: auto;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    background-color: @bg-white;
-    list-style: none;
-    padding: 0;
+    padding: 40px 120px;
   }
 
   .photo-list__item {
-    width: 300px;
-    height: 460px;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    margin: 0 auto;
-  }
+    &--panorama {
+      width: 900px;
+      margin: 0 auto;
+    }
 
-  .photo-list__item:nth-child(1) {
-    background: @bg-lightgrey url("../img/photo-car-desktop@1x.jpg") no-repeat 100% 0;
-    margin-bottom: 20px;
-  }
-
-  .photo-list__item:nth-child(2) {
-    background: @bg-lightgrey url("../img/photo-drumset-desktop@1x.jpg") no-repeat 100% 0;
-    margin-bottom: 20px;
-    margin-left: 20px;
-  }
-
-  .photo-list__item:nth-child(3) {
-    background: @bg-lightgrey url("../img/photo-window-desktop@1x.jpg") no-repeat 100% 0;
-    margin-bottom: 20px;
-    margin-left: 20px;
-  }
-
-  .photo-list__item:nth-child(4) {
-    background: @bg-lightgrey url("../img/photo-fair-desktop@1x.jpg") no-repeat 100% 0;
-    margin-bottom: 20px;
-  }
-
-  .photo-list__item:nth-child(5) {
-    background: @bg-lightgrey url("../img/photo-pov-desktop@1x.jpg") no-repeat 100% 0;
-    margin-bottom: 20px;
-    margin-left: 20px;
-  }
-
-  .photo-list__item:nth-child(6) {
-    background: @bg-lightgrey url("../img/photo-wing-desktop@1x.jpg") no-repeat 100% 0;
-    margin-bottom: 20px;
-    margin-left: 20px;
+    &--panorama img {
+      width: 1200px;
+      height: 506px;
+      margin-left: -150px;
+    }
   }
 }
