--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -1,7 +1,6 @@
 .advantages {
   background-color: @bg-white;
   color: @col-black;
-  margin: 0;
 }
 
 .advantages__post {
@@ -41,12 +40,8 @@
 }
 
 @media (min-width: @tablet-width) {
-  .advantages {
-    margin-top: -20px;
-  }
-
   .advantages__post {
-    .fonts(300; 40px; normal);
+    font-size: 40px;
     width: 550px;
     margin: 20px auto;
   }
@@ -91,12 +86,8 @@
 }
 
 @media (min-width: @desktop-width) {
-  .advantages {
-    margin-top: -40px;
-  }
-
   .advantages__post {
-    .fonts(300; 50px; normal);
+    font-size: 50px;
     width: 810px;
     margin: 35px auto;
 
