--- a/source/less/style.less
+++ b/source/less/style.less
@@ -8,3 +8,5 @@
 @import "blocks/application-market.less";
 @import "blocks/advantages.less";
 @import "blocks/page-body.less";
+@import "blocks/button-list.less";
+@import "blocks/photo-list.less";
