--- a/source/less/blocks/page-body.less
+++ b/source/less/blocks/page-body.less
@@ -1,13 +1,14 @@
 .page-body {
   min-width: 320px;
   margin: 0 auto;
-  background-color: @bg-darkgrey;
   color: #000000;
   font-family: "Open Sans", "Arial", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
   line-height: 24px;
+  background: url("../img/bg-back-mobile@1x.jpg") no-repeat 0 0;
+  background-size: cover;
 }
 
 .visually-hidden:not(:focus):not(:active),
@@ -27,12 +28,16 @@ input[type="radio"].visually-hidden {
 
 @media (min-width: @tablet-width) {
   .page-body {
-    width: 660px;
+    width: auto;
+    background: url("../img/bg-back-tablet@1x.jpg") no-repeat 0 0;
+    background-size: cover;
   }
 }
 
 @media (min-width: @desktop-width) {
   .page-body {
-    width: 1200px;
+    width: auto;
+    background: url("../img/bg-back-desktop@1x.jpg") no-repeat 0 0;
+    background-size: cover;
   }
 }
