--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -7,7 +7,7 @@
   padding: 30px 20px;
   margin-top: -20px;
 
-  &--hidden {
+  &--index {
     display: none;
   }
 }
@@ -55,7 +55,7 @@
     justify-content: space-between;
     background-color: @bg-white;
 
-    &--hidden {
+    &--index {
       display: flex;
     }
   }
