--- a/source/less/blocks/application-market.less
+++ b/source/less/blocks/application-market.less
@@ -3,7 +3,7 @@
   flex-direction: column;
   justify-content: flex-end;
   align-items: flex-end;
-  height: 670px;
+  padding-top: 470px;
   background: transparent url("../img/iphone-hand-mobile@1x.png") no-repeat 0 33%;
 }
 
@@ -39,7 +39,7 @@
 
 @media (min-width: @tablet-width) {
   .application-market {
-    height: 625px;
+    padding-top: 70px;
     justify-content: center;
     align-items: flex-start;
     background: transparent url("../img/iphone-hand-tablet@1x.png") no-repeat bottom;
@@ -62,7 +62,6 @@
 
 @media (min-width: @desktop-width) {
   .application-market {
-    height: 750px;
     background: transparent url("../img/iphone-hand-desktop@1x.png") no-repeat bottom;
   }
 
