--- a/source/less/blocks/button-list.less
+++ b/source/less/blocks/button-list.less
@@ -4,18 +4,13 @@
 
 .button-list {
   margin-top: 5px;
-  padding: 0 20px;
+  padding: 10px 20px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   background-color: @bg-darkgrey;
 }
 
-@media (min-width: @tablet-width) {
-  .button-list {
-    height: 110px;
-  }
-}
 
 @media (min-width: @desktop-width) {
   .button-list__logo {
