--- a/source/less/blocks/page-body.less
+++ b/source/less/blocks/page-body.less
@@ -7,7 +7,7 @@
   font-weight: 400;
   font-size: 14px;
   line-height: 24px;
-  background: url("../img/bg-back-mobile@1x.jpg") no-repeat 0 0;
+  background: @bg-darkgrey url("../../img/bg-back-mobile@1x.jpg") no-repeat 0 0;
   background-size: cover;
 }
 
@@ -28,16 +28,16 @@ input[type="radio"].visually-hidden {
 
 @media (min-width: @tablet-width) {
   .page-body {
-    width: auto;
-    background: url("../img/bg-back-tablet@1x.jpg") no-repeat 0 0;
+    width: 660px;
+    background: @bg-darkgrey url("../../img/bg-back-tablet@1x.jpg") no-repeat 0 0;
     background-size: cover;
   }
 }
 
 @media (min-width: @desktop-width) {
   .page-body {
-    width: auto;
-    background: url("../img/bg-back-desktop@1x.jpg") no-repeat 0 0;
+    width: 1200px;
+    background: @bg-darkgrey url("../../img/bg-back-desktop@1x.jpg") no-repeat 0 0;
     background-size: cover;
   }
 }
