--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -1,6 +1,13 @@
 .page-main {
   width: auto;
-  margin: 0;
+}
+
+.page-main__application-market {
+  margin: 0;auto;
+}
+
+.page-main__advantages {
+  margin: 0;auto;
 }
 
 .page-main__post-paragraph {
@@ -18,9 +25,9 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  .fonts(300; 24px; auto);
+  .fonts(300; 24px; normal);
   width: 280px;
-  margin: auto;
+  margin: 20px auto;
   text-align: center;
   color: @bg-white;
 }
@@ -29,7 +36,6 @@
   .page-main__title {
     font-size: 50px;
     width: 620px;
-    height: 200px;
   }
 
   .page-main__post-paragraph {
