--- a/source/less/blocks/photo-list.less
+++ b/source/less/blocks/photo-list.less
@@ -5,12 +5,11 @@
   background-color: @bg-white;
   list-style: none;
   margin-top: -20px;
-  padding: 0;
 }
 
 .photo-list__item {
   width: 280px;
-  height: 320px;
+  min-height: 320px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -51,7 +50,7 @@
 
   .photo-list__item {
     width: 300px;
-    height: 460px;
+    min-height: 460px;
 
     &--panorama {
       width: 580px;
@@ -62,7 +61,7 @@
 
   .photo-list__image {
     width: 660px;
-    height: 509px;
+    min-height: 509px;
     margin-left: -40px;
   }
 }
