--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -15,8 +15,7 @@
   flex-direction: column;
   align-items: flex-start;
   list-style: none;
-  padding: 0 20px;
-  padding-bottom: 310px;
+  padding: 0 20px 310px;
   background: @bg-lightgrey url("../img/iphone-screen-mobile@1x.png") no-repeat 50% 100%;
 }
 
