--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -1,13 +1,6 @@
 .page-main {
   width: auto;
-}
-
-.page-main__application-market {
-  margin: 0;auto;
-}
-
-.page-main__advantages {
-  margin: 0;auto;
+  margin: 0 auto;
 }
 
 .page-main__post-paragraph {
