--- a/source/less/blocks/photo-list.less
+++ b/source/less/blocks/photo-list.less
@@ -46,6 +46,7 @@
     flex-wrap: wrap;
     background-color: @bg-white;
     list-style: none;
+    padding: 0 20px;
   }
 
   .photo-list__item {
@@ -55,7 +56,6 @@
     &--panorama {
       width: 580px;
       padding: 0 20px;
-      margin: 20px;
     }
   }
 
