--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -1,19 +1,25 @@
 .page-main {
   width: auto;
-  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
 }
 
 .page-main__post-paragraph {
-  display: flex;
-  justify-content: center;
   background-color: @bg-white;
-  width: 100%;
+  .inner(260px; 0);
   .fonts(400; 14px; 30px);
   color: @bg-darkgrey;
-  white-space: pre;
+  padding: 60px 30px;
+  text-align: center;
 }
 
-.page-main__title {
+.page-main__inner {
+  .inner(320px; 20px);
+  background: @bg-darkgrey url("../img/bg-back-mobile@1x.jpg") no-repeat center -9px;
+}
+
+.page-main__title,
+.page-main__title-photo {
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -26,12 +32,52 @@
 }
 
 @media (min-width: @tablet-width) {
-  .page-main__title {
+  .page-main__inner {
+    .inner(660px; 0);
+    background: @bg-darkgrey url("../img/bg-back-tablet@1x.jpg") no-repeat center -9px;
+  }
+
+  .page-main__title,
+  .page-main__title-photo {
     font-size: 50px;
     width: 620px;
   }
 
   .page-main__post-paragraph {
+    .inner(440px; 0);
     font-size: 18px;
+    padding: 100px 110px 85px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .page-main__inner {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: auto;
+    min-height: 285px;
+    margin: 0;
+    padding: 0;
+    background: @bg-darkgrey url("../img/bg-back-desktop@1x.jpg") no-repeat center -9px;
+  }
+
+  .page-main__title {
+    .inner(820px; 0);
+  }
+
+  .page-main__title-photo {
+    .inner(350px; 0);
+  }
+
+  .page-main__vrapper {
+    width: auto;
+    background-color: @bg-white;
+  }
+
+  .page-main__post-paragraph {
+    .inner(624px; 0);
+    font-size: 18px;
+    padding: 100px 312px 90px;
   }
 }
