--- a/source/less/blocks/application-market.less
+++ b/source/less/blocks/application-market.less
@@ -1,29 +1,63 @@
 .application-market {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  align-items: flex-end;
-  padding-top: 470px;
-  background: transparent url("../img/iphone-hand-mobile@1x.png") no-repeat 0 33%;
+  width: auto;
+  background: @bg-darkgrey url("../img/bg-back-mobile@1x.jpg") no-repeat center -9px;
 }
 
-.application-market__wrapper {
-  padding: 0 20px;
-  background-color: #1d2631;
+.application-market__inner {
+  .inner(320px; 20px);
+  min-height: 668px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  background: transparent url("../img/iphone-hand-mobile@1x.png") no-repeat 20% 19%;
 }
 
 .application-market__title {
-  display: none;
+  width: 222px;
+  .fonts(400; 18px; 18px);
+  color: transparent;
+  text-align: center;
+}
+
+.application-market__box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  .inner(320px; 0);
+  padding: 30px 0;
+  background-color: #1d2631;
 }
 
 .application-market__button {
   width: 280px;
   .fonts(400; 18px; 18px);
   .link(@bg-white);
+  border: 2px solid @bg-white;
+  padding: 15px 10px;
+  border-radius: 30px;
+  text-align: center;
   text-transform: uppercase;
+
+  &:hover,
+  &:focus {
+    background-color: @bg-white;
+    color: @col-red;
+  }
+
+  &:active {
+    color: rgba(210, 49, 86, 0.3);
+  }
 }
 
 .application-market__list {
+  width: 205px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-end;
+  margin: 30px auto;
+  padding: 0;
   list-style: none;
 }
 
@@ -33,36 +67,56 @@
 
 .application-market__text {
   width: 280px;
-  .fonts(300; 14px; auto);
+  .fonts(300; 14px; 24px);
   color: @bg-white;
+  text-align: center;
 }
 
 @media (min-width: @tablet-width) {
   .application-market {
     padding-top: 70px;
-    justify-content: center;
-    align-items: flex-start;
-    background: transparent url("../img/iphone-hand-tablet@1x.png") no-repeat bottom;
+    background: url("../img/bg-back-tablet@1x.jpg") no-repeat center -9px;
   }
 
-  .application-market__wrapper {
+  .application-market__inner {
+    min-width: 660px;
+    justify-content: center;
+    align-items: flex-start;
+    background: transparent url("../img/iphone-hand-tablet@1x.png") no-repeat 100% 100%;
+  }
+
+  .application-market__title {
+    .inner(620px; 20px);
+    display: flex;
+    flex-direction: column;
+    width: 200px;
+    .fonts(300; 40px; normal);
+    color: @bg-white;
+    margin-left: 20px;
+    text-align: center;
+  }
+
+  .application-market__box {
+    .inner(620px; 20px);
     width: 300px;
     margin: 0;
     margin-top: 20px;
     background-color: transparent;
   }
-
-  .application-market__title {
-    display: flex;
-    width: 300px;
-    .fonts(300; 40px; normal);
-    color: @bg-white;
-  }
 }
 
 @media (min-width: @desktop-width) {
   .application-market {
-    background: transparent url("../img/iphone-hand-desktop@1x.png") no-repeat bottom;
+    min-width: 1200px;
+    background: url("../img/bg-back-desktop@1x.jpg") no-repeat 0 -10%;
+    background-size: cover;
+  }
+
+  .application-market__inner {
+    min-width: 980px;
+    justify-content: center;
+    align-items: flex-start;
+    background: transparent url("../img/iphone-hand-desktop@1x.png") no-repeat 100% 100%;
   }
 
   .application-market__title {
