--- a/source/less/blocks/page-body.less
+++ b/source/less/blocks/page-body.less
@@ -1,14 +1,16 @@
 .page-body {
   min-width: 320px;
-  margin: 0 auto;
-  color: #000000;
+  margin: 0;
+  padding: 0;
+
   font-family: "Open Sans", "Arial", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
   line-height: 24px;
-  background: @bg-darkgrey url("../../img/bg-back-mobile@1x.jpg") no-repeat 0 0;
-  background-size: cover;
+  color: #000000;
+
+  background-color: @bg-darkgrey;
 }
 
 .visually-hidden:not(:focus):not(:active),
@@ -26,18 +28,7 @@ input[type="radio"].visually-hidden {
   overflow: hidden;
 }
 
-@media (min-width: @tablet-width) {
-  .page-body {
-    width: 660px;
-    background: @bg-darkgrey url("../../img/bg-back-tablet@1x.jpg") no-repeat 0 0;
-    background-size: cover;
-  }
-}
-
-@media (min-width: @desktop-width) {
-  .page-body {
-    width: 1200px;
-    background: @bg-darkgrey url("../../img/bg-back-desktop@1x.jpg") no-repeat 0 0;
-    background-size: cover;
-  }
+img {
+  max-width: 100%;
+  height: auto;
 }
