--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -1,10 +1,15 @@
 .page-footer {
+  .inner (320px; 0);
+  background-color: @bg-white;
+}
+
+.page-footer__inner {
+  .inner (320px; 20px);
   display: flex;
   flex-direction: column;
+  justify-content: space-around;
   align-items: center;
-  width: auto;
-  background-color: @bg-white;
-  padding: 30px 20px;
+  padding: 30px 0;
 
   &--index {
     display: none;
@@ -16,23 +21,44 @@
   width: 160px;
 }
 
+.page-footer__logo-image {
+  --color: @bg-darkgrey;
+
+  &:hover,
+  &:focus {
+    --color: @col-red;
+  }
+
+  &:active {
+    --color: @bg-darkgrey;
+    opacity: 0.3;
+  }
+}
+
 .page-footer__social-list {
   list-style: none;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   width: 180px;
-  margin: 0;
-  padding: 0;
 }
 
 .page-footer__social-item {
   width: 50px;
   height: 35px;
-  border: 2px solid @col-lightengrey;
+  border: 4px solid @col-lightengrey;
   border-radius: 50%;
   text-align: center;
   padding-top: 15px;
+
+  &:hover,
+  &:focus {
+    border-color: @col-black;
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
 }
 
 .page-footer__copyright {
@@ -48,11 +74,29 @@
   color: @bg-darkgrey;
 }
 
+.page-footer__copyright-image {
+  --color: @col-red;
+
+  &:hover,
+  &:focus {
+    --color: @col-black;
+  }
+
+  &:active {
+    --color: rgba(0, 0, 0, 0.3);
+  }
+}
+
 @media (min-width: @tablet-width) {
   .page-footer {
+    .inner(660px; 0);
+  }
+
+  .page-footer__inner {
+    display: flex;
     flex-direction: row;
     justify-content: space-between;
-    background-color: @bg-white;
+    .inner(620px; 20px);
 
     &--index {
       display: flex;
@@ -62,6 +106,12 @@
 
 @media (min-width: @desktop-width) {
   .page-footer {
+    width: auto;
+  }
+
+  .page-footer__inner {
+    width: 940px;
+    margin: 0 auto;
     padding: 75px 130px;
   }
 }
