--- a/source/less/mixins.less
+++ b/source/less/mixins.less
@@ -1,3 +1,9 @@
+.inner(@width; @padding) {
+  width: @width;
+  margin: 0 auto;
+  padding: 0 @padding;
+}
+
 .fonts(@font-weight; @font-size; @line-height) {
   font-family: "Open Sans", "Arial", sans-serif;
   font-style: normal;
